fix overflow on projects, mobile version of contact

--- a/src/App.css
+++ b/src/App.css
@@ -230,6 +230,27 @@ li {
   align-items: flex-start;
 }
 
+#roll-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%;
+}
+
+#roll {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.project-demo {
+  width: 100%;
+}
+
 /* Mobile Responsiveness */
 @media (max-width: 800px) {
   main {
@@ -246,7 +267,7 @@ li {
     width: 100%;
     flex-direction: row;
     justify-content: space-evenly;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .section-button {
@@ -283,5 +304,50 @@ li {
       transform: rotate(180deg) translateY(0);
       opacity: 1
     }
+  }
+
+  #contact-container {
+    align-items: center;
+  }
+}
+
+@media (max-width: 700px) {
+  #title {
+    font-size: 3rem;
+  }
+
+  #job-title {
+    font-size: 1.5rem;
+  }
+
+  #contact-container {
+    --font-size: 1rem;
+    font-size: var(--font-size);
+
+    #call-button {
+      font-size: var(--font-size);
+    }
+  }
+
+  .section-button {
+    font-size: 1.25rem;
+  }
+
+  main {
+    --margin-and-offset: 1.5rem;
+  }
+
+  #page-container {
+    width: 100%;
+  }
+
+  .project-container {
+    width: 100%;
+  }
+
+  .project-header {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: initial;
   }
 }
